# fys4460-4

./: .gitignore  CMakeLists.txt  Makefile  report.tex
src/: P.f90  k.f90  r2.f90  stuff.f90
